MSGQ remade so it can be used as other objects

--- a/GVTOS.ioc
+++ b/GVTOS.ioc
@@ -1,7 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
@@ -25,20 +29,20 @@ Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=5.6.0
-MxDb.Version=DB.5.0.60
-NVIC.BusFault_IRQn=true\:15\:0\:true\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:15\:0\:true\:false\:true\:true\:false
-NVIC.EXTI0_IRQn=true\:15\:0\:true\:false\:true\:true\:true
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
+NVIC.BusFault_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:15\:0\:true\:false\:true\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:15\:0\:true\:false\:true\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:15\:0\:true\:false\:true\:true\:false
-NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:15\:0\:true\:false\:true\:true\:false
+NVIC.SVCall_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:15\:0\:true\:false\:true\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=B1
 PA0-WKUP.Locked=true
@@ -104,11 +108,15 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=GVTOS.ioc
 ProjectManager.ProjectName=GVTOS
+ProjectManager.ProjectStructure=
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x200
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM13_Init-TIM13-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
